--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
   <style>
     body {
-  margin: 0;
-  font-family: 'Tajawal', sans-serif;
-  background: url('background.PNG') no-repeat center center fixed;
-  background-size: cover;
-  color: #333;
-  direction: rtl;
-}
+      margin: 0;
+      font-family: 'Tajawal', sans-serif;
+      background: url('background.PNG') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
+      direction: rtl;
+    }
 
     .container { background-color: #fff; opacity: 0.9; max-width: 400px; margin: 50px auto; padding: 30px 25px; border-radius: 15px; box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); }
     .header { text-align: center; margin-bottom: 20px; }
@@ -29,138 +29,124 @@
   </style>
 </head>
 <body>
-  <script>
-  // 🧑‍💼 Step 1: Define allowed usernames and passwords
+<script>
   const admins = {
     "waqas": "waqas2025",
     "azoz": "azoz 2025"
   };
 
-  // 🧠 Step 2: Check if already logged in (sessionStorage keeps it for one browser tab)
   const authenticated = sessionStorage.getItem("admin_authenticated");
 
   if (!authenticated) {
     const username = prompt("👤 أدخل اسم المستخدم:");
     const password = prompt("🔐 أدخل كلمة المرور:");
 
-    // ✅ Step 3: Check if username/password are correct
     if (admins[username] && admins[username] === password) {
       sessionStorage.setItem("admin_authenticated", "true");
-      sessionStorage.setItem("admin_user", username); // ✅ Save who logged in
+      sessionStorage.setItem("admin_user", username);
     } else {
       alert("❌ اسم المستخدم أو كلمة المرور غير صحيحة.");
-      window.location.href = "https://google.com"; // redirect if wrong
+      window.location.href = "https://google.com";
     }
   }
 </script>
 
-  <div class="container">
-    <div class="header">
-      <img src="logo.PNG" alt="شعار الشركة" />
-      <h1>استمارة تسجيل مؤتمر IQIDS</h1>
-    </div>
-    <form id="registrationForm">
-      <label for="name">الاسم الثلاثي باللغة الإنكليزية</label>
-      <div class="note">هذا الاسم سيتم كتابته على شهادة المشاركة بالمؤتمر</div>
-      <input type="text" id="name" name="name" required />
-      <label for="phone">رقم الهاتف</label>
-      <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (:964xxxxxxx+)</div>
-      <input type="tel" id="phone" name="phone" required />
-      <label for="occupation">المهنة</label>
-      <div class="note">مثال: طالب، مهندس، طبيب...</div>
-      <input type="text" id="occupation" name="occupation" required />
-      <button type="submit">تسجيل</button>
-    </form>
+<div class="container">
+  <div class="header">
+    <img src="logo.PNG" alt="شعار الشركة" />
+    <h1>استمارة تسجيل مؤتمر IQIDS</h1>
   </div>
+  <form id="registrationForm">
+    <label for="name">الاسم الثلاثي باللغة الإنكليزية</label>
+    <div class="note">هذا الاسم سيتم كتابته على شهادة المشاركة بالمؤتمر</div>
+    <input type="text" id="name" name="name" required />
+    <label for="phone">رقم الهاتف</label>
+    <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (:964xxxxxxx+)</div>
+    <input type="tel" id="phone" name="phone" required />
+    <label for="occupation">المهنة</label>
+    <div class="note">مثال: طالب، مهندس، طبيب...</div>
+    <input type="text" id="occupation" name="occupation" required />
+    <button type="submit">تسجيل</button>
+  </form>
+</div>
 
-  <script>
-    document.getElementById('registrationForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const name = document.getElementById('name').value.trim();
-      const phone = document.getElementById('phone').value.trim();
-      const occupation = document.getElementById('occupation').value.trim();
-      const unique_id = crypto.randomUUID();
+<script>
+  document.getElementById('registrationForm').addEventListener('submit', async function (e) {
+    e.preventDefault();
+    const name = document.getElementById('name').value.trim();
+    const phone = document.getElementById('phone').value.trim();
+    const occupation = document.getElementById('occupation').value.trim();
+    const unique_id = crypto.randomUUID();
 
-      // Save to Supabase
-      const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json",
-          "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-          "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-          "Prefer": "return=representation"
-        },
-        body: JSON.stringify({ name, phone, occupation, unique_id })
-      });
-
-      if (!response.ok) {
-        alert("❌ حدث خطأ أثناء التسجيل.");
-        return;
-      }
-
-      // Generate QR
-      const qr = new QRCodeStyling({
-        width: 512,
-        height: 512,
-        data: unique_id,
-        image: "logo.PNG",
-        dotsOptions: { color: "#a72828", type: "rounded" },
-        cornersSquareOptions: { type: "extra-rounded", color: "#a72828" },
-        cornersDotOptions: { type: "dot", color: "#a72828" },
-        backgroundOptions: { color: "#ffffff" },
-        imageOptions: { crossOrigin: "anonymous", imageSize: 0.2 }
-      });
-
-      const blob = await qr.getRawData("png");
-      const imgBitmap = await createImageBitmap(blob);
-
-      const finalCanvas = document.createElement("canvas");
-      finalCanvas.width = 512;
-      finalCanvas.height = 580;
-      const ctx = finalCanvas.getContext("2d");
-
-      ctx.fillStyle = "#ffffff";
-      ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
-      ctx.drawImage(imgBitmap, 0, 0);
-
-      ctx.fillStyle = "#a72828";
-      ctx.font = "22px Tajawal, sans-serif";
-      ctx.textAlign = "center";
-      ctx.fillText(name, 256, 560);
-
-      const base64QR = finalCanvas.toDataURL("image/png");
-
-      const message = `مرحباً ${name}،
-
-شكرًا لتسجيلك في مؤتمر IQIDS 🎓
-
-يرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.
-
-📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.
-🚫 لا تشارك هذا الرمز مع أي شخص آخر.
-
-نتطلع لرؤيتك!`;
-
-      const send = await fetch("https://api.ultramsg.com/instance117839/messages/image", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          token: "tz99z4sjn5xz8npg",
-          to: phone,
-          image: base64QR,
-          caption: message
-        })
-      });
-
-      const result = await send.json();
-      if (result.sent || result.status === "sent") {
-        alert("✅ تم التسجيل وتم إرسال الرمز عبر واتساب.");
-      } else {
-        alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
-      }
-
-      document.getElementById('registrationForm').reset();
+    const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+        "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...",
+        "Prefer": "return=representation"
+      },
+      body: JSON.stringify({ name, phone, occupation, unique_id })
     });
-  </script>
+
+    if (!response.ok) {
+      alert("❌ حدث خطأ أثناء التسجيل.");
+      return;
+    }
+
+    const qr = new QRCodeStyling({
+      width: 512,
+      height: 512,
+      data: unique_id,
+      image: "logo.PNG",
+      dotsOptions: { color: "#a72828", type: "rounded" },
+      cornersSquareOptions: { type: "extra-rounded", color: "#a72828" },
+      cornersDotOptions: { type: "dot", color: "#a72828" },
+      backgroundOptions: { color: "#ffffff" },
+      imageOptions: { crossOrigin: "anonymous", imageSize: 0.2 }
+    });
+
+    const blob = await qr.getRawData("png");
+    const imgBitmap = await createImageBitmap(blob);
+
+    const finalCanvas = document.createElement("canvas");
+    finalCanvas.width = 512;
+    finalCanvas.height = 580;
+    const ctx = finalCanvas.getContext("2d");
+
+    ctx.fillStyle = "#ffffff";
+    ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
+    ctx.drawImage(imgBitmap, 0, 0);
+
+    ctx.fillStyle = "#a72828";
+    ctx.font = "22px Tajawal, sans-serif";
+    ctx.textAlign = "center";
+    ctx.fillText(name, 256, 560);
+
+    const base64QR = finalCanvas.toDataURL("image/png");
+
+    const message = `مرحباً ${name}،\n\nشكرًا لتسجيلك في مؤتمر IQIDS 🎓\n\nيرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.\n\n📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.\n🚫 لا تشارك هذا الرمز مع أي شخص آخر.\n\nنتطلع لرؤيتك!`;
+
+    const send = await fetch("https://api.ultramsg.com/instance117839/messages/image", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        token: "tz99z4sjn5xz8npg",
+        to: phone,
+        image: base64QR,
+        caption: message
+      })
+    });
+
+    const result = await send.json();
+    if (result.sent || result.status === "sent") {
+      alert("✅ تم التسجيل وتم إرسال الرمز عبر واتساب.");
+    } else {
+      alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
+    }
+
+    document.getElementById('registrationForm').reset();
+  });
+</script>
 </body>
 </html>
