--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -42,8 +41,16 @@
       <div class="note">يجب أن يحتوي على واتساب – يرجى إدخال الرقم مع مفتاح الدولة (:964xxxxxxx+)</div>
       <input type="tel" id="phone" name="phone" required />
       <label for="occupation">المهنة</label>
-      <div class="note">مثال: طالب، مهندس، طبيب...</div>
-      <input type="text" id="occupation" name="occupation" required />
+<div class="note">يرجى اختيار المهنة من القائمة</div>
+<select id="occupation" name="occupation" required>
+  <option value="">اختر المهنة</option>
+  <option value="طالب">طالب</option>
+  <option value="طبيب أسنان">طبيب أسنان</option>
+  <option value="تقني صناعة أسنان">تقني صناعة أسنان</option>
+  <option value="أستاذ جامعي">أستاذ جامعي</option>
+  <option value="زائر">زائر</option>
+  <option value="أخرى">أخرى</option>
+</select>
       <button type="submit">تسجيل</button>
     </form>
   </div>
@@ -57,83 +64,24 @@
       const unique_id = crypto.randomUUID();
 
       // Save to Supabase
-      const response = await fetch("https://vwaaflcmhmfggesqpwoa.supabase.co/rest/v1/attendees", {
+      const response = await fetch("https://uckmsmyfjsspbgbrwvzf.supabase.co", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
-          "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
-          "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ3YWFmbGNtaG1mZ2dlc3Fwd29hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDU1MTA2NDAsImV4cCI6MjA2MTA4NjY0MH0.WbQOM5ge0xNQhItR5ai-Kyr0nARf2AizINm-4RDO1ok",
+          "apikey": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVja21zbXlmanNzcGJnYnJ3dnpmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MzEzMzIsImV4cCI6MjA2MjMwNzMzMn0.5uzGumqbFbhNhz8FWNKKK1hWQg9F8_Kwvk2kL_HoW-c",
+          "Authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InVja21zbXlmanNzcGJnYnJ3dnpmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY3MzEzMzIsImV4cCI6MjA2MjMwNzMzMn0.5uzGumqbFbhNhz8FWNKKK1hWQg9F8_Kwvk2kL_HoW-c",
           "Prefer": "return=representation"
         },
         body: JSON.stringify({ name, phone, occupation, unique_id })
       });
 
       if (!response.ok) {
-        alert("❌ حدث خطأ أثناء التسجيل.");
-        return;
-      }
+      alert("❌ حدث خطأ أثناء التسجيل.");
+      return;
+    }
 
-      // Generate QR
-      const qr = new QRCodeStyling({
-        width: 512,
-        height: 512,
-        data: unique_id,
-        image: "logo.PNG",
-        dotsOptions: { color: "#a72828", type: "rounded" },
-        cornersSquareOptions: { type: "extra-rounded", color: "#a72828" },
-        cornersDotOptions: { type: "dot", color: "#a72828" },
-        backgroundOptions: { color: "#ffffff" },
-        imageOptions: { crossOrigin: "anonymous", imageSize: 0.2 }
-      });
-
-      const blob = await qr.getRawData("png");
-      const imgBitmap = await createImageBitmap(blob);
-
-      const finalCanvas = document.createElement("canvas");
-      finalCanvas.width = 512;
-      finalCanvas.height = 580;
-      const ctx = finalCanvas.getContext("2d");
-
-      ctx.fillStyle = "#ffffff";
-      ctx.fillRect(0, 0, finalCanvas.width, finalCanvas.height);
-      ctx.drawImage(imgBitmap, 0, 0);
-
-      ctx.fillStyle = "#a72828";
-      ctx.font = "22px Tajawal, sans-serif";
-      ctx.textAlign = "center";
-      ctx.fillText(name, 256, 560);
-
-      const base64QR = finalCanvas.toDataURL("image/png");
-
-      const message = `مرحباً ${name}،
-
-شكرًا لتسجيلك في مؤتمر IQIDS 🎓
-
-يرجى الاحتفاظ برمز QR المرفق — ستحتاجه عند الدخول إلى المؤتمر.
-
-📍 هذا الرمز خاص بك ولا يمكن استخدامه من قبل شخص آخر.
-🚫 لا تشارك هذا الرمز مع أي شخص آخر.
-
-نتطلع لرؤيتك!`;
-
-      const send = await fetch("https://api.ultramsg.com/instance117839/messages/image", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          token: "tz99z4sjn5xz8npg",
-          to: phone,
-          image: base64QR,
-          caption: message
-        })
-      });
-
-      const result = await send.json();
-      if (result.sent || result.status === "sent") {
-        alert("✅ تم التسجيل وتم إرسال الرمز عبر واتساب.");
-      } else {
-        alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
-      }
-
+    alert("✅ تم التسجيل بنجاح!");
+ 
       document.getElementById('registrationForm').reset();
     });
   </script>
