--- a/index.html
+++ b/index.html
@@ -73,13 +73,54 @@
         body: JSON.stringify({ name, phone, occupation })
       });
 
+    
       if (!response.ok) {
       alert("❌ حدث خطأ أثناء التسجيل.");
       return;
     }
 
-    alert("✅ تم التسجيل بنجاح!");
+      const message = `مرحباً ${name}،
+
+
+يسرّ فريق رؤيا – اللجنة المنظمة أن يُعلن عن قبولكم للمشاركة في المعرض والمؤتمر العالمي العراقي لطب الأسنان، والذي سيُقام في
  
+📍قاعة الأبرار – الجادرية - بغداد
+
+وذلك في يومي 30 و31 من شهر أيار (مايو) 2025
+ 
+بحضور نخبة من الاطباء وتقنيي صناعة الاسنان  الدوليين، ومشاركة واسعة من شركات ومراكز عالمية رائدة في مجالات طب الأسنان وتقنيات صناعة الأسنان.
+
+🔹رسوم الاشتراك: 35,000 دينار عراقي فقط
+🔹لتأكيد حجز مقعدكم، يرجى تسديد الرسوم عبر أحد الأرقام التالية:
+زين كاش 
+
+د. [وقاص الكرخي] – [ 07732934320  ]
+
+[عز الدين حسين]  –   [ 07763315131 ]
+
+✨ المقاعد محدودة، والمشاركة المسبقة تضمن لكم مكانًا بين نخبة المتخصصين، وفرصة استثنائية لبناء علاقات مهنية واستكشاف فرص جديدة.
+
+مع خالص التقدير،
+تيم رؤيا – اللجنة المنظمة للمعرض والمؤتمر العراقي العالمي لطب الأسنان`;
+
+      const send = await fetch("https://api.ultramsg.com/instance117965/messages/image", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({
+          token: "7rn5yw3sjmdr3hnf",
+          to: phone,
+          caption: message
+        })
+      });
+
+      const result = await send.json();
+      if (result.sent || result.status === "sent") {
+        alert("تم التسجيل ويرجى مراجعة تعليمات الحجز عبر الوتساب ✅.");
+      } else {
+        alert("تم التسجيل، لكن لم يتم إرسال الواتساب.");
+      }
+
+    
       document.getElementById('registrationForm').reset();
     });
   </script>
